network/netpolicy-net/webserver2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: centos-webserver2
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: centos-webserver2
