network/netpolicy-net/webserver2/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: centos-webserver2
spec:
  to:
    kind: Service
    name: centos-webserver
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
